<resources>
    <string name="app_name">Feed Book</string>

    <!-- Strings related to login -->
    <string name="prompt_User">USER NAME</string>
    <string name="prompt_password">PASSWORD</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_user">This user name is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="test">TestMain</string>
    <string-array name="navigation_drawer_items_array">
        <item>Connect</item>
        <item>Fixtures</item>
        <item>Table</item>
    </string-array>


    <string name="title_activity_nav">NavActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Log Out</string>
    <string name="category">Category : </string>
    <string name="url">Feed URL : </string>
    <string name="category_prompt">Choose a category</string>
    <string name="unsubscribe">Unsubscribe Feed</string>
    <string name="subscribe">Subscribe Feed</string>
    <string name="Feedlist">List Of Feeds Subscribed</string>
    <string name="ModFeedlist">List Of Feeds </string>
    <string name="Artlist">List Of Articles In The Feed </string>
    <string name="ArtFavlist">List Of Starred Articles </string>
    <string name="AddFeed">Add Feed Details</string>

    <string-array name="category_arrays">
        <item>News</item>
        <item>Sports</item>
        <item>Food</item>
        <item>Science</item>
        <item>Travel</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
