<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="androidapp.feedbook.view.SubscribeFragment" >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AddFeed"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_alignParentLeft="true"
        android:textSize="20sp"
        android:paddingBottom="8dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/txt_catsubs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:paddingTop="8dp"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/category_arrays"
            android:prompt="@string/category_prompt"
            android:paddingTop="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_second"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:layout_below="@+id/linear">
       <TextView
            android:id="@+id/txt_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url" />


    <EditText
    android:id="@+id/edit_url"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType=""
    android:maxLines="1"
    android:singleLine="true"
    />

    </LinearLayout>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subscribe"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/linear_second"
        android:paddingTop="@dimen/activity_vertical_margin"/>

</RelativeLayout>
