<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="androidapp.feedbook.SubscribeFragment" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ModFeedlist"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_alignParentLeft="true"
        android:textSize="20sp"
        android:paddingBottom="8dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_manage"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/txt_catsubs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:paddingTop="8dp"/>

        <Spinner
            android:id="@+id/spinner_manage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/category_arrays"
            android:prompt="@string/category_prompt"
            android:paddingTop="8dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_check"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/linear_manage"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin">
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_btn"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/linear_check"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin">
    </LinearLayout>

</RelativeLayout>